--- a/simple_cv.html
+++ b/simple_cv.html
@@ -60,7 +60,7 @@
                 </h2>
             </th>
             <td colspan="3" rowspan="3">
-                <img class="face" src="images/shabab.jpg" width="100%" align="left">
+                <img class="face" src="cat.jpg" width="100%" align="left">
             </td>
         </tr>
         <tr>
